--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "ng": "ng",
         "start": "ng serve --port 9009",
         "build": "ng build --prod --aot",
+        "test": "echo 'No tests yet...'",
         "lint": "ng lint"
     },
     "dependencies": {
