--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: node_js
 node_js:
     - stable
 
+install:
+    - npm install
+    - npm test
+    - npm run build
+
 deploy:
     provider: pages
     skip_cleanup: true
