--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: node_js
 node_js:
     - stable
 
-install:
-    - npm install
-    - npm test
+after_success:
     - npm run build
 
 deploy:
