--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 node_js:
     - stable
 
+after_success:
+    - npm run build
+
 deploy:
     provider: pages
     skip_cleanup: true
