--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
-language: node_js
+language: node_js # Building with node js
 node_js:
-    - stable
+    - stable # Download the stable node version
 
-# blocklist
+# Blocklist
 branches:
-  except:
-    - gh-pages # will be deployed to, no need to build it
+    except:
+      - gh-pages # will be deployed to, no need to build it
 
-after_success:
-    - npm run build
+script:
+    - npm run build # Generates the dist folder with built angular app
 
 deploy:
     provider: pages
-    skip_cleanup: true
+    skip_cleanup: true # Prevent travis from cleaning out the branch before the deploy occurs
     github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
     on:
-        branch: master
-    local_dir: dist
+        branch: master # Build only from master
+    local_dir: dist # Only copy the dist conents
